# github-account-switcher

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
packaging/: gh-switcher.iss  gh-switcher.spec
packaging/deb/: postinst.sh
scripts/: mockup.html  screenshot.mjs
src/gh_switcher/: app.py
tests/: conftest.py  test_accounts.py  test_config.py  test_identity.py  test_packaging.py  test_switcher.py
tests/bash/: install.bats
tests/bash/helpers/: mock_env.bash
